[package]
name = "snowsight_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
chacha20poly1305 = "0.9.0"
ethers = { git = "https://github.com/gakonst/ethers-rs.git"}
hex = "0.4.3"
home = "0.5.3"
reqwest = "0.11.10"
serde_json = "1.0.81"
serde = "1.0.137"
tokio = { version = "1.18.2", features = ["full"] }
tokio-tungstenite = "*"
url = "2.2.2"